2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Xfer.pl, installcheck/Installcheck/Mock.pm,
	  installcheck/amvault.pl: installcheck do not do indirect ndmp.

2013-11-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Use full_write instead of write.

2013-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Check return value of fdopen,
	  fclose(dev_outf).
	* server-src/driver.c, server-src/planner.c: Check return value of
	  holding_file_get_dumpfile.

2013-11-01  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Archive.swg: amar_attr_add_data_fd return an off_t.

2013-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Use hash table instead of re-scanning a list.

2013-10-31  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Output DATA-PATH
	* server-src/amcheck.c: Check device data-path against dle data-path.

2013-10-30  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Unlock the abort_mutex when wait waiting
	  for the wait_thread thread.

2013-10-29  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: INDIRECT property default ot yes.
	* man/xml-source/amanda-devices.7.xml: Document it.

2013-10-28  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Fix perl warning.
	* perl/Amanda/ScanInventory.pm: Check for label not in tapelist.

2013-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: amandaify property name.

2013-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Add dependencis for genversion.$(OBJEXT)

2013-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Tag 'file changed as we read it' as GOOD.

2013-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Do not load the config for version subcommand.
